--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -280,33 +280,42 @@
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:background="#FFD2D2"
+            android:background="#FFFFFF"
             android:layout_gravity="start"
             android:orientation="vertical"
             android:padding="15dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="50dp"
-                >
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="테스트"
-                    android:layout_weight="1"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="테스트2"
-                    android:layout_weight="1"
-                    android:gravity="center"/>
-            </LinearLayout>
+            <TextView
+                android:id="@+id/mset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수정"
+                android:layout_gravity="right"
+                android:textSize="15dp"
+                android:textColor="#929292"/>
+            <FrameLayout
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:background="@drawable/profile_border"
+                android:padding="4dp"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="20dp">
+
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/defaultimg2" />
+            </FrameLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="테스트3"/>
+                android:id="@+id/nickname"
+                android:text="닉네임1"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"/>
         </LinearLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
 
