--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -316,6 +316,16 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/email"
+                android:text="example@gamil.com"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:textColor="#909090"
+                android:layout_marginTop="10dp"/>
         </LinearLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
 
