--- a/app/src/main/res/layout/activity_cafe.xml
+++ b/app/src/main/res/layout/activity_cafe.xml
@@ -10,7 +10,6 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="null"
         android:layout_margin="15dp"
         android:padding="0dp"
         android:id="@+id/toolbar">
@@ -22,17 +21,28 @@
             android:textSize="20dp"
             android:textStyle="bold"/>
     </androidx.appcompat.widget.Toolbar>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/cafesearch"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/rounded_border"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="10dp"
         android:hint="찾고싶은 카페를 입력하세요."
         android:paddingLeft="15dp"
         android:maxLines="1" />
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/searchicon"
+            android:layout_gravity="right"
+            android:id="@+id/searchButton"/>
+
+    </FrameLayout>
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
@@ -41,18 +51,18 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="test1"/>
+            android:text="주변 추천 카페"/>
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="test2"/>
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test3"/>
+            android:text="별점 높은 카페"/>
     </com.google.android.material.tabs.TabLayout>
 
-
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 
 
