--- a/app/src/main/res/layout/activity_fixprofile.xml
+++ b/app/src/main/res/layout/activity_fixprofile.xml
@@ -39,12 +39,14 @@
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_gravity="left"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:textColor="#000000"/>
     <EditText
         android:id="@+id/profilename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:textColor="#000000"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,12 +62,14 @@
             android:textStyle="bold"
             android:textSize="18dp"
             android:layout_gravity="left"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:textColor="#000000"/>
         <EditText
             android:id="@+id/profileemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:textColor="#000000"/>
     </LinearLayout>
     <Button
         android:id="@+id/profilecheckbt"
