--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,10 +95,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/matzip"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/restaurant"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -120,10 +120,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/cafe"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/coffee"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -145,10 +145,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/activity"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/activ"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -178,10 +178,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/share"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/share"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -203,10 +203,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/cal"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/keys"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -228,10 +228,10 @@
                             >
                             <ImageButton
                                 android:id="@+id/spin"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
                                 android:padding="40dp"
-                                android:background="@drawable/rectangletest"
+                                android:background="@drawable/lottery"
                                 android:clipToOutline="true"
                                 android:contentDescription="이미지 버튼"
                                 android:layout_gravity="center"
@@ -256,10 +256,10 @@
                         >
                         <ImageButton
                             android:id="@+id/timetable"
-                            android:layout_width="315dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
                             android:padding="40dp"
-                            android:background="@drawable/rectangletest"
+                            android:background="@drawable/timetable"
                             android:clipToOutline="true"
                             android:contentDescription="이미지 버튼"
                             android:layout_gravity="center"
