--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -25,4 +25,13 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:id="@+id/scheduleRecy"/>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/schedule_table"
+        android:rowCount="19"
+        android:columnCount="8">
+    </GridLayout>
 </LinearLayout>
