move files | edit RouletteView

--- a/app/src/main/res/layout/activity_roulette.xml
+++ b/app/src/main/res/layout/activity_roulette.xml
@@ -86,7 +86,7 @@
         </LinearLayout>
 
     </LinearLayout>
-    <com.example.journey.RouletteView
+    <com.example.journey.data.activity.Roulette.RouletteView
         android:id="@+id/rouletteView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
