--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,9 +51,18 @@
                     android:textColor="#858585"
                     android:text="검색어를 입력하세요"
                     android:textSize="18dp"
+                    android:id="@+id/search"
                     />
             </androidx.appcompat.widget.Toolbar>
             </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/search_fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#80000000"
+                android:visibility="gone" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
