--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/map"
                 android:name="com.naver.maps.map.MapFragment"
@@ -20,7 +21,20 @@
                 android:layout_height="match_parent"
                 app:navermap_latitude="37.340174"
                 app:navermap_longitude="126.7335933" />
-        <LinearLayout
+            <ImageButton
+                android:id="@+id/clearMarkersButton"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_gravity="end|center"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/round_button_bg"
+                android:src="@drawable/ic_clear"
+                android:scaleType="centerInside"
+                android:visibility="gone"/>
+
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
