--- a/app/src/main/res/layout/activity_fixprofile.xml
+++ b/app/src/main/res/layout/activity_fixprofile.xml
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="NickName"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_gravity="left"
@@ -48,29 +48,7 @@
         android:layout_marginLeft="5dp"
         android:textColor="#000000"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/rounded_border"
-        android:padding="15dp"
-        android:layout_margin="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="10dp"
-            android:textColor="#000000"/>
-        <EditText
-            android:id="@+id/profileemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textColor="#000000"/>
-    </LinearLayout>
+
     <Button
         android:id="@+id/profilecheckbt"
         android:layout_width="match_parent"
