--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -13,7 +13,8 @@
         android:textSize="15dp"
         android:textColor="#E2E2E2"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:textStyle="bold"/>
     <FrameLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -29,15 +30,29 @@
             android:scaleType="centerCrop"
             android:src="@drawable/defaultimg2" />
     </FrameLayout>
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/realnickname"
-        android:text="nickname"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:textColor="#000000"/>
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="\@"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textColor="#000000"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/realnickname"
+            android:text="nickname"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textColor="#000000"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
