--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     android:adjustViewBounds="true"/>
                 <TextView
                     android:id="@+id/toptext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="nolleogasil"
                     android:textStyle="italic"
@@ -61,7 +61,8 @@
                     android:layout_marginTop="20dp"
                     android:textColor="#ffffff"
                     android:layout_gravity="center"
-                    android:fontFamily="@font/jua"/>
+                    android:fontFamily="@font/jua"
+                    android:gravity="center"/>
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
