--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -28,14 +28,21 @@
         android:layout_height="wrap_content"
         android:id="@+id/sch_tab"/>
 
-    <com.example.journey.data.activity.schedule.GridTimetable
-        android:id="@+id/gridTimetable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:id="@+id/scheduleRecy"/>
+        android:id="@+id/viewPager" />
+
+<!--    <com.example.journey.data.activity.schedule.GridTimetable-->
+<!--        android:id="@+id/gridTimetable"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content" />-->
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1"-->
+<!--        android:id="@+id/scheduleRecy"/>-->
 </LinearLayout>
