--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".data.activity.schedule.ScheduleActivity">
+    tools:context=".data.activity.schedule.TimetableActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -14,6 +14,7 @@
         android:layout_margin="15dp"
         android:padding="0dp"
         android:id="@+id/toolbar">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
             android:layout_gravity="center"
             android:textSize="20dp"
             android:textStyle="bold"/>
+
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
@@ -28,14 +30,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/sch_tab"/>
 
-    <com.example.journey.data.activity.schedule.GridTimetable
-        android:id="@+id/gridTimetable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/scheduleRecy"/>
+        android:layout_weight="1" />
+
 </LinearLayout>
