--- a/app/src/main/res/layout/fragment_timetable_new.xml
+++ b/app/src/main/res/layout/fragment_timetable_new.xml
@@ -9,4 +9,9 @@
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btntest"/>
 </FrameLayout>
