--- a/app/src/main/res/layout/activity_division_calculate.xml
+++ b/app/src/main/res/layout/activity_division_calculate.xml
@@ -105,5 +105,6 @@
         android:text="계산하기"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:backgroundTint="#FFB7B7"/>
 </LinearLayout>
