--- a/app/src/main/res/layout/activity_roulette.xml
+++ b/app/src/main/res/layout/activity_roulette.xml
@@ -99,6 +99,14 @@
             android:orientation="vertical"
             android:padding="8dp" />
     </ScrollView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:gravity="center"
+        android:text="▼"
+        android:textColor="#ff0000"
+        android:textSize="18dp"
+        android:contentDescription="룰렛 포인터"/>
 
 
     <com.example.journey.data.activity.Roulette.RouletteView
@@ -106,7 +114,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_margin="16dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"/>
 
     <Button
         android:id="@+id/spinBtn"
