--- a/app/src/main/res/layout/activity_roulette.xml
+++ b/app/src/main/res/layout/activity_roulette.xml
@@ -106,9 +106,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="15dp"
+        android:padding="50dp"/>
 
     <Button
         android:id="@+id/spinBtn"
